fix: TT-114 STT FACADE 레디스 저장까지 완료
- 기존의 컨벤션과 맞지 않는 saveSentenceInfo -> Information으로 변경
- redis 저장되는 로직까지 구현 완료